Added Babel config

--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   },
   "homepage": "https://github.com/AnbarasanJ24/webpack5-config#readme",
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "babel-loader": "^8.2.3",
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.3.1",
     "webpack-server": "^0.1.2"
   }
 }
