--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack server",
     "watch": "webpak --watch",
-    "build": "webpack"
+    "build": "SET NODE_ENV=production&  webpack",
+    "build-dev": "webpack"
   },
   "repository": {
     "type": "git",
